--- a/first.html
+++ b/first.html
@@ -1,10 +1,259 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> <!--此处是声明该语言类型，html，超文本标记语言，用于制作网页-->
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <title>The First Page</title>
 </head>
-<body>
+<!--引入本地外部css文件-->
+<link rel="stylesheet" type="text/css" href="css/first.css"/>
+<!--此处是引用本地js文件-->
+<script type="text/javascript" src="js/first.js"></script>
+<style type="text/css">
+    /*
+        先学习选择器，
+     */
+    /*
+        id选择器，以#开头，同样引用元素的id属性值,
+        你改一下密码input的样式，运行呀，嗨呀，没看到
+        我在开会，嘻嘻嘻
+     */
+    #userName {
+        color: red;
+    }
+    #password{
+        color: pink;
+    }
+    /*
+        *号表示全局选择器，也就是整个页面
+     */
+    body {
+        background-color: lightskyblue;
+    }
+    .left-div{
+        /* 今天学这几个 把右边的也写上，运行看看 没有颜色可以看出来吗
+            good question 你尝试加边框？ 边框忘记了 border是一个综合属性，对边框线的颜色，大小，粗细进行设置
+            这样就好了 go 像博彩网页配色，那你改一改？那么问题来了
+            我定义的不是左右两边么，现在显示的是上下的，我怎么把下面那个，放右边去 float 嗯，试试
+            这个情况，是这样的，左边这个div先生成已经占住了那一行的空间，下面再生成的div如果右浮动，就必须没有遮挡，才能够去顶上
+            有思路么 top先不讲？现在有没有什么想法呢 因为加了边框所以上不去吗，不是 加起来不能=100%？也不是 不明白啦
+            就是，左边的div太宽，右边的空间不足以让下面这个顶上去 可是加起来100%不是占满页面吗，边框的px也算，所以超过了100%
+            这不是边框的原因哈 就是加了边框，把边框的px也算上，就不够了，我表达的是这个意思
+            好滴 如果没有边框只有颜色就不会有这个问题，试试
+            现在我觉得两个div相隔太近了，我想要留点缝隙，怎么做 改一改宽度 如果我的宽度是固定的，不能改
+            现在，怎么改呢，我的div就这么宽 边距 doit 你改的不好 你看，你的上下左右全有边距，我其实只要右边和另一个div的边距 难不倒我！
+            既然你只设置一个右边距，为啥要写这么多呢 ,设置单个的，就这么写
+            那么问题来了，我这个时候表示啥 都是10px 浏览器不用关，这边Ctrl+S保存，那边刷新就可以了
+            好，那么这样呢 应该还是 看我操作 看明白怎么在浏览器中查看元素了么，它的样式，它的盒子模型 嗯嗯
+            ok 下一个 你记好我这边写的顺序  看到啦 所以这三个值分别表示哪些方位 上 左右 下 ok 这个还要看么，直接答？ 上下 左右 nice
+            宝宝真棒！我们来加点内容 chrome竟然会有这么奇怪的东西 是那个font标签 你看我写了font标签了么 浏览器自己加的
+            竟然是翻译的锅 我刚刚看到，翻译提示一出来，字就变蓝了，先不管，继续
+            如果一个容器里的文本内容是这个样子的，肯定是不好看的，我们需要美化一下
+            首先，文字顶格显示就很丑。怎么改？单词不会哈哈哈，有个样式可以居中
+            居中是一种方法，但我不像居中，我就是不想文字距离边框太近，简直是贴着的 内边距 试试 总是想关掉，习惯就好了
+            然后，我不想看见右边的div了，有什么办法 为什么不想看到啦，很多时候，右边的div是不存在的，只有我做了某个操作，它才显示
+            我们做的话，肯定是先加载右边的div，然后再隐藏，等满足条件之后，再让它显示
+            当然，还可以当时生成一个，但性能不好。所以我只需要先隐藏它就行了 设置一个触发事件，满足了才显示。是的，但我怎么先隐藏呢
+            事件后面说 现在，你做个事件，让它显示？ 昨天不是讲了一个按钮的点击事件么，就用那个呀 不知道div怎么写 div也可以点啊 写在哪里
+            标签里面呗
+        */
+        height: 300px; /* 高度 */
+        width: 300px; /* 宽度 */
+        /*border: palegreen 5px solid;*/
+        float: left;
+        background-color: yellow;
+        margin: 10px 10px; /* 外边距，顺序是上，右，下，左*/
+        padding: 10px 10px 10px 10px;/*内边距，顺序同上*/
+       /*  background-color: red; !* 背景色 *!
+        display: block; !* 元素显示属性  这个可以吗 试试呗 看不懂单词 查查？*!
+        overflow: auto; !* 内容溢出处理 *!
+        float: left; !* 浮动，浮动指页面上某个元素脱离元素排列，浮在最上层 *!
+        clear: both; !* 清除之前元素的浮动影响 由于元素浮动，可能会对后面的元素产生影响，所以提供了清除浮动效果的属性 *!*/
+    }
+    .right-div{
+        height: 300px;
+        width: 300px;
+        margin: 10px 10px;
+        /*border: palegreen 5px solid;*/
+        float: left;
+        background-color: pink;
+        padding: 10px 10px 10px 10px;
+        display:none;
+    }
+</style>
+<!--此处是网页内嵌js-->
+<script type="text/javascript">
+    // 第一条js代码
+    //alert('这是一个弹框！');
+    // alert('Hello,js!');
 
+    /**
+     * 这是一个方法 onclick是一个事件，按钮事件，表示单击按钮时，触发这个方法
+     * 试试,所有的方法都是有参数的，你可以添加个参数我看看么
+     */
+    function showMessage (e) {
+        // 下面教你看浏览器的控制台，console的输出都会在控制台中显示
+        // 这里是我要讲的，alert这个东东有问题，准确的值应该使用console来获取
+        // 既然你学过html，给我做个登录框呗，有用户名，有密码 !!忘记了！
+        // 输入框是哪个标签 input? 嗯，那就开始吧 格式不记得 记得多少写多少呀
+    }
+
+    function getValues() {
+        // document这个对象里面，有查找页面元素的方法，找找看
+        // 这里p是属性，m是方法，property和method
+        // 找不到么，不晓得是哪个单词
+        // 在html页面，每一个页面元素都叫element，所以我让你打个element
+        // 一般来说，这三个是常用的。由于id是唯一的，所以第一个方法找出来的元素一定是一个
+        // 二，三个方法就可能有多个了，这个可以理解么 嗯嗯，之前注意到了这几个，但是不晓得element什么意思，就很迷茫
+        // 我们先用第一个方法，把用户名和密码的值获取到，
+        // 第一步，拿到元素；第二步，拿到元素的value属性的值。所以这里的参数应该填啥呢，元素上不是有id属性么
+        // 去观察html元素，是id的值，不是id,那获取到有什么用呀，这个问题问得好，下回分解，先填进来
+        // 然后输出这个element，观察它 我以为它是获取id的值的方法哈哈哈
+        // 是根据id的值获取元素，哈哈哈哈，去控制台输出它,把你获取到的element放进去
+        // no 不是这个，这个不是id的值么 等号的左边才是方法的返回值呀， go
+        // 怎么获取对象的属性呢，js 这里我讲一下
+        // 1.obj[property],2.obj.property。所以，element的value属性，应该怎么拿到呢
+        // 两种都试试，输出，看对不对，会了没 en
+        // 然后开始学习css
+        var element = document.getElementById('userName');
+        console.dir(element); // 我的对象不是叫obj呀，应该替换成什么
+        console.dir(element['value']); // 这样就好了
+        console.dir(element.value);
+        // var element1 = document.getElementsByClassName()
+        // var element2 = document.getElementsByName()
+    }
+</script>
+<script type="text/javascript">
+    /**
+     * 回想一下我昨天讲的东西，你有没有思路
+     * 右边的div都被隐藏了，你把事件写在右边的话，怎么触发呢
+     * ok，目前，我们的设定是，点左边出右边
+     * 你为啥改成了left-div 没有想法，犯蠢了
+     * 目前的情况是这样的，右边的div是存在的，只是被隐藏了，所以我们需要找到它，你这里写的没有错
+     * 因为只有class，所以用className找也没有任何问题
+     * 找到了之后，我们干嘛呢？有啥想法么 让它对应的元素显示出来
+     * 我们通过修改了style样式使它隐藏的，那么同样修改style样式，能不能使它显示呢？ 方法也可以改样式吗
+     * 啥都能改  allright，又到了娱乐的找方法环节， 稍等，你先把你拿到的element输出来看看先
+     * 是不是拿到了 嗯 但这里有个问题，我昨天说了class这个属性的值，全局是可以有很多个的，那么怎么办呢
+     * 此时，摁住Ctrl+左键，看看这个方法的返回值 操作一遍
+     * HTMLCollectionOf<Element> 认不认识这个结构 不 这个只是尤为重要，记好了
+     * HTMLCollectionOf表示对象类型，java里的Class，明白么 噢 java里的泛型你知道么 不
+     * 我这里不展开讲，就讲这个。由于HTMLCollectionOf这个对象是一个数组， 数组知道么 嗯
+     * 数组不仅可以存字符串，整型这些值，它也可以存对象，这个晓得吧 不
+     * 存对象的数组，叫对象数组。举个例子，一个糖罐子里，有很多糖，这里的糖罐子，是一个对象，同时也是一个数组。明白么 噢
+     * 因为它能存很多颗糖，所以它才叫数组。
+     * 然后，糖罐子里又有糖这个对象，所以糖罐子装糖就是一个对象数组，明白了么 那你给我举个例子
+     * 快，听话 懂了呀 那你说一个有什么问题呢 池塘，池塘的鱼
+     * 好，我继续讲。
+     * 我问你，糖罐子里可以装别的东西么 可以 如果我规定只能装糖呢 那就按你规定的呗
+     * 那么，泛型的意思就是，我规定了数组的元素只能是同一个类型，明白了么 噢
+     * 糖罐子<糖>就是这个语法了 HTMLCollectionOf<Element>你懂了没呢 1
+     * ok，目前我们拿到element是一个数组，说说你怎么拿数组元素的 不是已经指定了是right-div这个元素吗 不是全部都要显示出来吗
+     * right-div这不是一个元素，只是我们页面上只有一个，<div class="right-div"></div>表示class为right-div的元素
+     * 我来给你加点东西，这个时候你拿到的right-div就是很多个了，我怎么拿到我想要的那个呢
+     * 有四个 要找div的 嗯，对的
+     */
+    function getDiv() {
+        let elements = document.getElementsByClassName('right-div')
+        /**
+         * 循环elements，找到div那个元素 明白，但是具体不太会 你就告诉我你会不会写循环，java的 噢 忘了
+         * 先不想循环，和循环没关系。很单纯的问题，不要想太多，我怎么拿到数组中某个元素， 不知道了 噢
+         * 下标 没印象？ 这里的下标是什么 0123456 可是事先就知道它的下标么 是的 下标永远都是从0开始，一直到数组结束 那怎么知道哪个是需要的
+         * 所以要写循环呀，假装我啥也不知道，我循环一下，每个属性都判断一遍，筛选到我想要的，就好咯
+         * 所以，你是否明白循环的意义？ 明白，只是对数组不那么熟悉 不知道具体怎么写循环条件
+         * 以下标为零开始，循环次数是数组的长度， 每循环一次，下标+1，明白？ 你一写就想起来了,来，写一个
+         * js里面没有int这个类型，所有的变量类型都可以用var let,好像现在var也不推荐用了，就用let
+         * 我昨天讲了，对象获取属性值有两种方式，其中一种也同样适用于数组，所以，elements的第i个元素，
+         * 应该怎么写呢 里面不是可以写属性吗 这个只认得数字和字符串
+         * 你觉得它有div这个属性么，你去看看？i定义出来，就是放在这的 go
+         * 输出五条数据，有没有问题？什么问题 你觉得对不对 整个数组不用输出，那就是对的
+         * 好，现在拿到所有的element了，可以进行判断了，那么用哪个元素判断呢？去看看
+         * 写吧 现在让循环只输出满足你条件的那条数据 localname = div?还是equals === 三个等号 为啥 ==不是判断吗 是的，你试试呀 不会写 可以呀
+         * 喵喵喵？ if不会写？会呀
+         *  那就写呀 直接写条件就可？不然呢
+         *  所以localName哪来的 不知道啊，它是对象的属性么？是 那对象呢 这样？elements['div']你不是写过了么，它没有啊 那咋办啊 localName是泛型的属性啊
+         *  是第i个糖的属性，你说应该咋写 不会？？？？ 你在浏览器看到的是啥？ ？？？我被你搞蒙了完全
+         *  localName是数组里元素的属性，这句话你懂不懂？ 肯定懂啊 那数组里的元素怎么拿到 elements[i]？ 不是么？ 那拿elements[i]的属性，有难度么？
+         *  elements[i]才是一个对象，i不就是个数字么？ 那咋办？
+         *  你都拿到了elements[i]这个对象，你要拿它的localName属性，很有难度么 elements[i].localName 不对么 这怎么能蒙？？？?
+         *  我更加蒙了  我整个人很迷惑 ？那你说你那里迷惑 怎么拿它的属性 我知道啊 可是现在元素是哪个 对 那你给我打问号
+         *  问号的意思是，这应该很肯定，不应该是懵的 我每次都感觉是对的 但是有时候是想不通啊 所以不确定 确定又怎么样呢，错了改回来 我又不知道你问号是啥意思
+         *  我以为你质疑我，就整个人懵掉，这也不对那也不对就很崩溃 直接说好吗
+         *  我想你确定自己的答案 快些判断吧,run
+         *  几经波折，终于拿到了div，然后，重头戏来了意义是啥
+         *  话说，你懂不懂赋值？ 我啥都不懂 let a = 1;解释一下这段代码 把a的值赋为1，所以赋值是啥？这不就是么 style又不是一个参数 咋赋值啊
+         *  但我的语法没问题呀，而且style是一个对象，我给它赋值一个1，没有任何问题，嗯，先不纠结这个。
+         *  再去浏览器，看style里面有啥，你干嘛刷新呀
+         *  我把display的值改掉是不是就行了 昂 do it
+         *  1.let是什么鬼， 不是赋值得吗 2. display属性是在 elements[i] 在div的style里 不是3.设置成1以后你确定是显示的？ 不
+         *  java里的int怎么用的？你在一个存在的变量前面也加int么？刚才搜的display属性值呢？去看看
+         *  那就一层层点进去呗 block是个啥，字符串？变量？
+         *  你看这里为啥是黄的 不知道啊 放上去 为啥要3个等号 这个你可以深入了解一下，有时间的话，规定这么写，你就先这么写着
+         *  好了，run吧 太难了 咱们再拓展一下
+         *  如果它是显示的，我点击就隐藏，如果是隐藏的，我点击就显示 太狠了你 就加个判断，判断属性值
+         *  写吧
+         *  讲一下
+         *  if (elements[i].localName === 'div') 这是干嘛的? 回答问题 我在想！凶什么！！我没凶呀
+         *  这个是用来找div的？ 对不对 对啊 那我所有对div的操作，是不是不应该离开这个if？
+         *  if里面打分号是什么鬼？你把它放进去，不就好了么，继续else
+         *  看黄的地方噢噢 你在if条件里，为啥只有一个= 你刚打的。。。
+         *  ok run 好了是吧 昂
+         *  我来找找你代码的bug
+         *  首先，这个循环，有问题，因为的没有及时结束循环，我如果在if外面写一些东西，你看看
+         *  结束循环有几种方法 break 很好，应该加在哪 你放在那，永远都是第一次循环就结束，break要放在判断里面！！！重点
+         *  第二，我来简化一下你的代码 嗨呀，装逼失败，那就先不用这个 我们来优化一下判断
+         * 好啦，下课！ 老师再见 等等
+         * 教你提交代码 点那个绿色的√
+         */
+        for(let i = 0; i<elements.length;i++) {
+            if (elements[i].localName === 'div') {
+                // 看好我的操作 这是一个优雅代码的典型 这里的判断只需要一条代码 结束
+                elements[i].style.display = elements[i].style.display === 'none' ? 'block' : 'none';
+                /*if (elements[i].style.display === "block"){
+                    elements[i].style.display = "none";
+                }else {
+                    elements[i].style.display = "block";
+                }*/
+                break;
+            }
+        }
+
+    }
+</script>
+<body>
+    <!--登录表单，来吧 标签写完，记得结束-->
+    <!--变量的命名采用驼峰命名法，即除第一个单词，其他都首字母大写，例userName-->
+    <!--password是一整个单词呀，宝宝 附议 你知道value这个属性是用来干 不太知道，
+    value表示用户输入的值，所以这里是不能有值的，咱们这里对标签进行标记，有几个属性，记一下
+    id：全局唯一，不能有多个  这里的多个是指页面上其他标签的同类属性，不能重名
+    name：标签属性，可以存在多个
+    class：标签的样式，可以存在多个
+    你看，编译器不通过，这就ok了，如果我在一个标签里写两个相同的属性，可以么 不可以的
+    页面上的每个元素，都可以通过js来找到，但，怎么找到呢？有没有思路 通过属性的值吗，对啦。
+    宝宝真棒！！！
+    来，我们认识一下，js的一个对象，document。id属性就是啊，快填进去 我，以为唯一的一个，不用参数就可以找出来
+    -->
+    <!--<form action="#">
+        <input id="userName" type="text" name="userName"/>
+        <input id="password" type="password" name="password"/>
+        <button type="button" onclick="getValues()">登录</button>
+        <button type="button">重置</button>
+    </form>-->
+     <!--html的注释，用这个，我来给你完善，密码框你自己写哈-->
+    <!--你有办法设置两个div的宽度是页面的50%么-->
+    <div class="left-div" onclick="getDiv()">
+        提起编程思想，这个概念在我的脑海中一直是一个非常模糊的概念，我所知道的是作为一名开发人员，每个人都拥有这种能力，并且要不断地去探索到底怎么才能提高编程思想。那什么是编程思想呢？我觉得这个问题没有固定的答案，如果非要给一个定义，那大概就是用计算机来解决人们实际问题的思维方式，即编程思想。有面向过程编程，结构化编程以及面向对象编程。
+    </div>
+    <div class="right-div">
+        一个对象，我们也称prototype为原型对象，他具有共享方法的作用。实际上在创建每个构造函数时，都会自动附赠一个空对象，某些原型对象（prototype） ，属性原型，这个属性指向函数的原型对象，同时这个属性是一个对象类型的值。通过构造函数.prototype属性，可以使用此构造函数对应的一个原型对象。
+    </div>
+    <p class="right-div">
+        这是一个p元素
+    </p>
+    <label class="right-div">
+        这是一个label元素
+    </label>
+    <a class="right-div">
+        这是一个a标签
+    </a>
 </body>
 </html>
