--- a/pages/first.html
+++ b/pages/first.html
@@ -77,7 +77,7 @@
         float: left;
         background-color: pink;
         padding: 10px 10px 10px 10px;
-        display:none;
+        /*display:none;*/
     }
 </style>
 <!--此处是网页内嵌js-->
@@ -195,7 +195,7 @@
      */
     function getDiv() {
         let elements = document.getElementsByClassName('right-div')
-        /**
+        /**想不到怎么取这个名字
          * 循环elements，找到div那个元素 明白，但是具体不太会 你就告诉我你会不会写循环，java的 噢 忘了
          * 先不想循环，和循环没关系。很单纯的问题，不要想太多，我怎么拿到数组中某个元素， 不知道了 噢
          * 下标 没印象？ 这里的下标是什么 0123456 可是事先就知道它的下标么 是的 下标永远都是从0开始，一直到数组结束 那怎么知道哪个是需要的
@@ -252,7 +252,7 @@
                 /*if (elements[i].style.display === "block"){
                     elements[i].style.display = "none";
                 }else {
-                    elements[i].style.display = "block";
+                    elements[i].style.display = "block";百度看看这个东西咋用呢
                 }*/
                 break;
             }
@@ -263,6 +263,31 @@
         let str = '12345';
         location.href = 'second.html?str='.concat(str);
     }
+    window.onload = function (){
+        let span = document.createElement('span');
+        span.innerText = '一颗棉花糖';
+        let right_div = document.getElementById('right-div');
+        // right_div.appendChild(span) // 添加子元素 run 报错的意思是，不能在null中获取appendChiild，为啥right_div是空的呢 隐藏了，找不到
+        right_div.insertBefore(span, right_div.childNodes[0]) // run 呃，我说错了，第一个参数是新元素 前面不是已经放进去了吗，前面的代码 是啊
+
+        console.dir(span);
+    };
+    /**
+     * 创建一个对象
+     * @type {{name: string, id: string}}
+     */
+    let obj = {
+        id: '',
+        name: '',
+        nodeObj: {}, // 对象
+        array:[],
+        doSomething: function (a) {
+            alert('钰儿宝宝最可爱！');
+            alert(a);
+            console.dir(a);
+        }
+    };
+    obj.doSomething(obj);
 </script>
 <body>
     <!--登录表单，来吧 标签写完，记得结束-->
@@ -289,8 +314,10 @@
     <div class="left-div" onclick="getDiv()">
         提起编程思想，这个概念在我的脑海中一直是一个非常模糊的概念，我所知道的是作为一名开发人员，每个人都拥有这种能力，并且要不断地去探索到底怎么才能提高编程思想。那什么是编程思想呢？我觉得这个问题没有固定的答案，如果非要给一个定义，那大概就是用计算机来解决人们实际问题的思维方式，即编程思想。有面向过程编程，结构化编程以及面向对象编程。
     </div>
-    <div class="right-div">
-        一个对象，我们也称prototype为原型对象，他具有共享方法的作用。实际上在创建每个构造函数时，都会自动附赠一个空对象，某些原型对象（prototype） ，属性原型，这个属性指向函数的原型对象，同时这个属性是一个对象类型的值。通过构造函数.prototype属性，可以使用此构造函数对应的一个原型对象。
+    <div class="right-div" id="right-div">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
     </div>
     <p class="right-div">
         这是一个p元素
