--- a/pages/common.html
+++ b/pages/common.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="../js/jquery-3.5.1.js"></script>
 <body>
 </body>
 </html>
