--- a/pages/third.html
+++ b/pages/third.html
@@ -30,7 +30,9 @@
 
     // }
     // 当我们引入jquery之后，这个方法就不会再用了。我们下载的jquery有问题么 哈哈哈 嘿嘿，那咋办啊
+    window.onload(function () {
 
+    })
     $(function(){ // 在jquery上的写法，这里等价于上面的事件。你在这里拿一下下面这两个元素
         let name = document.getElementById("name");
         let color = document.getElementById("color");
